Using Spring Boot version 3.2.1